--- a/index.html
+++ b/index.html
@@ -98,6 +98,8 @@
             margin-top: 3rem;
         }
     </style>
+    <script data-ad-client="ca-pub-5571465503362954" async
+        src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body class="govuk-template__body">
     <script>document.body.className = ((document.body.className) ? document.body.className + ' js-enabled' : 'js-enabled');</script>
